<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="random_button_text">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello World!</string>
    <string name="random_heading">Here is a random number between 0 and %d.</string>
    <string name="toast_button_text">Toast</string>
    <string name="count_button_text">Count</string>
    <string name="full_name">Full name: Mark Okhakumhe</string>
    <string name="slack">Slack: adefolawe</string>
    <string name="email">Email: markadefolawe@gmail.com</string>
    <string name="tracks">Tracks: Backend and Mobile</string>
</resources>
